<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <CheckBox
        android:id="@+id/checkBoxSettingsPostLangAz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_lang_1" />

    <CheckBox
        android:id="@+id/checkBoxSettingsPostLangEn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_lang_2" />

    <CheckBox
        android:id="@+id/checkBoxSettingsPostLangRu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_lang_3" />

    <CheckBox
        android:id="@+id/checkBoxSettingsPostLangTr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_lang_4" />

</LinearLayout>