<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/chk_more" />

    <LinearLayout
        android:id="@+id/moreView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/CheckBox04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_images" />

            <CheckBox
                android:id="@+id/CheckBox03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_animations" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/CheckBox02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_video" />

            <CheckBox
                android:id="@+id/CheckBox01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_jokes" />
        </LinearLayout>
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ExpandableListView>
    <!-- android:entries="@array/locations" -->

</LinearLayout>