<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg_about"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="46dp"
        android:text="@string/app_name"
        android:textColor="@color/holo_blue_bright"
        android:textSize="52.0dip"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/version"
        android:textColor="@color/color_dark_orange"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/gagsimageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/application_name"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/textViewAboutUS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="52dp"
        android:gravity="center"
        android:text="@string/aboutUS"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/DarkCyan"
        android:textStyle="bold" />

</LinearLayout>