<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.togrulseyid.gags.main.GagsViewer" >

    <!-- ic_menu_moreoverflow_normal_holo_light -->
    <!-- abc_ic_menu_moreoverflow_mtrl_alpha -->
    <item
        android:id="@+id/more"
        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always">
        <menu>
            <group android:id="@+id/nesede" >
                <item
                    android:id="@+id/menu_clear_cache"
                    android:icon="@drawable/ic_menu_delete_red"
                    android:orderInCategory="100"
                    android:title="@string/title_menu_clear_cache"
                    app:showAsAction="always"/>
                <item
                    android:id="@+id/menu_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:orderInCategory="100"
                    android:title="@string/title_menu_settings"
                    app:showAsAction="always"/>
                
                
                <item
                    android:id="@+id/menu_about"
                    android:icon="@drawable/ic_menu_info_details"
                    android:orderInCategory="100"
                    android:title="@string/title_menu_about"
                    app:showAsAction="always"/>
                <item
                    android:id="@+id/menu_exit"
                    android:icon="@drawable/ic_lock_power_off"
                    android:orderInCategory="100"
                    android:title="@string/title_menu_exit"
                    app:showAsAction="always"/>
            </group>
        </menu>
    </item>

</menu>