<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_margin="10dp"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <Button
        android:id="@+id/iRefresh_internet"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iExit_from_app"
        android:layout_centerHorizontal="true"
        android:background="@drawable/green_button"
        android:text="@string/refresh" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="0dp" >
    </ListView>

    <Button
        android:id="@+id/iExit_from_app"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/red_button"
        android:text="@string/exit" />

    <ImageView
        android:id="@+id/iNo_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/no_internet_connection"
        android:src="@drawable/internet_connection" />

    <TextView
        android:id="@+id/iChecking_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/checking_internet_connection"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Olive"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/iNo_internet_connection2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iChecking_internet_connection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/no_internet_connection"
        android:textColor="@color/Red4ic1"
        android:textStyle="bold" />

</RelativeLayout>